# data_complexity_analysis

./: .gitignore  CLAUDE.md  README.md  TODO.md  pyproject.toml
data_complexity/: abstract_metrics.py  metrics.py  play_with_pycol.py  plot_multiple_datasets.py  test_pycol.py
data_complexity/complexity_metric_experiments/real/: exp_compare_datasets.py
data_complexity/complexity_metric_exploration/real/: exp_compare_datasets.py  exp_dim_reduction.py  exp_scaling.py
data_complexity/complexity_metric_exploration/synthetic/: exp_compare_generators.py
data_complexity/data_metrics/: README.md  __init__.py  abstract_metrics.py  metrics.py
data_complexity/data_metrics/classical/: README.md  __init__.py  classical_metrics.py
data_complexity/data_metrics/concentration/: README.md  __init__.py  concentration_metrics.py
data_complexity/data_metrics/distributional/: README.md  __init__.py  distributional_metrics.py
data_complexity/data_metrics/feature/: README.md  __init__.py  feature_metrics.py
data_complexity/data_metrics/instance/: README.md  __init__.py  (+1 more)
data_complexity/examples/: legacy_complexity_over_datasets.py  play_with_pycol.py
data_complexity/experiments/: __init__.py  complexity_collection.py  exp_complexity_vs_ml.py  exp_comprehensive_correlation.py  exp_gaussian_correlation.py  exp_gaussian_cov_types.py  exp_gaussian_imbalance.py  exp_moons_vs_ml.py  exp_separation_vs_ml.py  experiment.py  ml_evaluation.py  ml_models.py  plotting.py  run_gaussian_variance.py
data_complexity/model_experiments/: __init__.py  complexity_collection.py  experiment.py  experiment_configs.py  experiment_utils.py  plotting.py
data_complexity/plotting/: __init__.py  plot_multiple_datasets.py
data_complexity/pycol/: README.md  complexity.py  pyproject.toml  test-script.py
pycol/: __init__.py  complexity.py
tests/: conftest.py  test_abstract_metrics.py  test_complexity_collection.py  test_experiment.py  test_grouped_experiment.py  test_metric_distance.py  test_metric_values.py  test_metrics.py  test_ml_evaluation.py  test_ml_metrics.py  test_ml_models.py  test_ml_pipeline.py
(+565 files in other folders)
