[project]
name = "data_complexity"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Matt Clifford", email = "mc15445@bristol.ac.uk"},
]
dependencies = ["numpy>=2.3.5", "liac-arff>=2.5.0", "scikit-learn>=1.7.2", "scipy>=1.16.3", "matplotlib>=3.10.7", "pandas>=2.3.3", "imbalanced-learn>=0.14.1", "dcor>=0.7"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "-e file:///${PROJECT_ROOT}/../toy_datasets#egg=toy-datasets",
    "-e file:///${PROJECT_ROOT}/#egg=data-complexity",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::sklearn.exceptions.ConvergenceWarning",
    "ignore:numpy.core.*is deprecated:DeprecationWarning",
]
