[project]
name = "pycol"
version = "0.1.0"
description = "PyCol: https://github.com/miriamspsantos/pycol?tab=readme-ov-file"
authors = [
    {name = "Miriam Seoane Santos", email = "miriams@dei.uc.pt"},
]
dependencies = [
    "numpy>=2.3.5", 
    "liac-arff>=2.5.0", 
    "scikit-learn>=1.7.2", 
    "scipy>=1.16.3", 
    "matplotlib>=3.10.7", 
    "pandas>=2.3.3"
    ]
requires-python = ">=3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
